--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <meta content="" name="descriptison" />
   <meta content="" name="keywords" />
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon" />
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="./assets/img/favicon.png" rel="icon" />
+  <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet" />
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" />
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
+  <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="./assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet" />
+  <link href="./assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" />
+  <link href="./assets/vendor/venobox/venobox.css" rel="stylesheet" />
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet" />
+  <link href="./assets/css/style.css" rel="stylesheet" />
   <!-- =======================================================
   * Template Name: DevFolio - v2.3.0
   * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
@@ -873,17 +873,17 @@
   </a>
   <div id="preloader"></div>
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="./assets/vendor/jquery/jquery.min.js"></script>
+  <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="./assets/vendor/php-email-form/validate.js"></script>
+  <script src="./assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="./assets/vendor/counterup/jquery.counterup.min.js"></script>
+  <script src="./assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="./assets/vendor/typed.js/typed.min.js"></script>
+  <script src="./assets/vendor/venobox/venobox.min.js"></script>
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
