--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Zack portfolio</title>
+  <title>DevFolio Bootstrap Portfolio Template - Index</title>
   <meta content="" name="descriptison" />
   <meta content="" name="keywords" />
   <!-- Favicons -->
