feuw changes title and cards

--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
             <a class="nav-link js-scroll active" href="#home">Acceuil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">Qui suis-je ?</a>
+            <a class="nav-link js-scroll" href="#about">info</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#techs">Mes Techno</a>
+            <a class="nav-link js-scroll" href="#techs">Techno</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Mes Projets</a>
+            <a class="nav-link js-scroll" href="#work">Projets</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#blog">Blog</a>
           </li> -->
 
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#certifs">Mes Certifications</a>
+            <a class="nav-link js-scroll" href="#certifs">Certifications</a>
           </li>
         </ul>
       </div>
@@ -221,7 +221,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/java.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -232,7 +232,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/laravel.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -243,7 +243,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/bootstrap.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -254,7 +254,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/jquery.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -265,7 +265,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
 
@@ -277,7 +277,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/git.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -307,7 +307,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
 
@@ -319,7 +319,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/docker.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -330,7 +330,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/mongodb.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -341,7 +341,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/redis.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -352,7 +352,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/android.png" class="img-fluid rounded b-shadow-a" alt="" />
@@ -363,7 +363,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
             <div class="service-box">
               <div class="service-ico">
                 <img src="./assets/img/angular.png" class="img-fluid rounded b-shadow-a" alt="" />
