--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h3 class="title-a" style="color: aliceblue;">En cour d'apprentissage</h3>
+              <h3 class="title-a" style="color: aliceblue;">En apprentissage</h3>
               <p class="subtitle-a" style="color: aliceblue;">
                 <i class="fas fa-quote-left"> </i><span style="margin: 0px 30px;">Tout comme un magicien, Plus de techno, plus de belle magie !!</span>  <i class="fas fa-quote-right"> </i>
               </p>
@@ -566,7 +566,7 @@
       <div class="container" id="certifs">
         <div class="col-sm-12">
           <div class="title-box text-center">
-            <h3 class="title-a" style="color: aliceblue;">Mes Certifications</h3>
+            <h3 class="title-a" style="color: aliceblue;">Certifications</h3>
             <p class="subtitle-a" style="color: aliceblue;">
               <i class="fas fa-quote-left"> </i><span style="margin: 0px 30px;">Une certification est une preuve de curiosité et motivation et non pas une preuve de perfection</span>  <i class="fas fa-quote-right"> </i>
             </p>
