--- a/index.html
+++ b/index.html
@@ -160,23 +160,23 @@
                       <h5 class="title-left">Qui suis-je ?</h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis
-                      ac lectus. Curabitur arcu erat, accumsan id imperdiet
-                      et, porttitor at sem. Praesent sapien massa, convallis a
-                      pellentesque nec, egestas non nisi. Nulla porttitor
-                      accumsan tincidunt.
+                      Jeune software enginner marocain issu du master Informatique Appliquée Offshoring 
+                      à la faculté des Sciences Rabat. passionné par la tehnologie, la conception et la 
+                      création de solution informatique. je me permets de créer ce portefolio pour partager
+                       mon enthousiasme à travers mes projets avec toute la communauté et échanger la 
+                       motivation et les idées. 
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh
-                      pulvinar a. Vivamus suscipit tortor eget felis porttitor
-                      volutpat. Vestibulum ac diam sit amet quam vehicula
-                      elementum sed sit amet dui. porttitor at sem.
+                      l'autoapprentissage et la création sont les deux facteurs majeurs pour la réussite 
+                      de tout développeur informatique. l'amour du domaine me pousse toujours à raffiner 
+                      mes connaissances, acquérir d'autre et partager l'expérience. le tout avec plain de 
+                       motivation et de plaisir.
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi,
-                      pretium ut lacinia in, elementum id enim. Nulla
-                      porttitor accumsan tincidunt. Mauris blandit aliquet
-                      elit, eget tincidunt nibh pulvinar a.
+                      toute application judicieuse est le fruit d'une collaboration d'efforts de plusieurs
+                       développeurs talentueux et motivés. la perfection demeure au coeur du travail d'équipe.
+                      Je suis toujours à disposition pour intégrer une équipe de développeurs passionnés avec
+                      un esprit ouvert sous un environnement professionnel et surtout humain.
                     </p>
                   </div>
                 </div>
