--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 </div>
                 <div class="row">
                   <div class="col-12 text-right" >
-                    <a class="title-s" href="" target="_blank">
+                    <a class="title-s" href="./projects/iao_credit.html">
                       <img src="./assets/img/demo.png" width="35" class="img-fluid rounded b-shadow-a" alt="" />
                     </a>
                     <a class="title-s" href="https://github.com/zackLakhal/Credit_Simulator"  target="_blank">
@@ -447,7 +447,7 @@
                 </div>
                 <div class="row">
                   <div class="col-12 text-right" >
-                    <a class="title-s" href="" target="_blank">
+                    <a class="title-s" href="./portfolio-details.html" >
                       <img src="./assets/img/demo.png" width="35" class="img-fluid rounded b-shadow-a" alt="" />
                     </a>
                     <a class="title-s" href="https://github.com/zackLakhal/B2B-tickets"  target="_blank">
@@ -529,25 +529,53 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="./assets/certif/0.png" alt="slide 0">
+                  <a href="./assets/certif/0.png" data-gall="certifGalerry" class="venobox">
+                    <div class="work-img">
+                      <img class="d-block w-100" src="./assets/certif/0.png" alt="slide 0">
+                    </div>
+                  </a>
                 </div>
                 <div class="carousel-item ">
-                  <img class="d-block w-100" src="./assets/certif/3.png" alt="slide 1">
+                  <a href="./assets/certif/1.png" data-gall="certifGalerry" class="venobox">
+                    <div class="work-img">
+                      <img class="d-block w-100" src="./assets/certif/1.png" alt="slide 1">
+                    </div>
+                  </a>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/certif/1.png" alt="slide 2">
+                <div class="carousel-item ">
+                  <a href="./assets/certif/2.png" data-gall="certifGalerry" class="venobox">
+                    <div class="work-img">
+                      <img class="d-block w-100" src="./assets/certif/2.png" alt="slide 2">
+                    </div>
+                  </a>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/certif/2.png" alt="slide 3">
+                <div class="carousel-item ">
+                  <a href="./assets/certif/3.png" data-gall="certifGalerry" class="venobox">
+                    <div class="work-img">
+                      <img class="d-block w-100" src="./assets/certif/3.png" alt="slide 3">
+                    </div>
+                  </a>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/certif/4.png" alt="slide 4">
+                <div class="carousel-item ">
+                  <a href="./assets/certif/4.png" data-gall="certifGalerry" class="venobox">
+                    <div class="work-img">
+                      <img class="d-block w-100" src="./assets/certif/4.png" alt="slide 4">
+                    </div>
+                  </a>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/certif/5.png" alt="slide 5">
+                <div class="carousel-item ">
+                  <a href="./assets/certif/5.png" data-gall="certifGalerry" class="venobox">
+                    <div class="work-img">
+                      <img class="d-block w-100" src="./assets/certif/5.png" alt="slide 5">
+                    </div>
+                  </a>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/certif/6.png" alt="slide 6">
+                <div class="carousel-item ">
+                  <a href="./assets/certif/6.png" data-gall="certifGalerry" class="venobox">
+                    <div class="work-img">
+                      <img class="d-block w-100" src="./assets/certif/6.png" alt="slide 6">
+                    </div>
+                  </a>
                 </div>
               </div>
 
