--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </section>
     <!-- End Services Section -->
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(./assets/img/counters-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -495,7 +495,7 @@
     <!-- End Portfolio Section -->
     <!-- ======= certifs Section ======= -->
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route"
-      style="background-image: url(assets/img/overlay-bg.jpg);">
+      style="background-image: url(./assets/img/overlay-bg.jpg);">
       <div class="overlay-mf"></div>
       <div class="container" id="certifs">
         <div class="col-sm-12">
